# f1-race-insights

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  FINAL_REPORT.md  Makefile  PROJECT_RULES.md  README.md  apply_mypy_fixes.py  backtest_mypy.txt  check-ec2-disk.json  check_mypy.py  command-id-deploy.txt  command-id.txt  curl-command-id.txt  curl-output.txt  curl-results.json  debug_backtest.py  deploy-direct-result.json  deploy-direct.json  deploy-final-result.json  deploy-final.json  deploy-frontend-fix.json  deploy-frontend-result.json  deploy-full-output.txt  deploy-input.json  deploy-output.txt  deploy-result.json  deploy-ssm.json  deploy-status.json  diagnostic-ec2.sh  diagnostic-output.txt  diagnostics.sh  docker-compose.yml  final_test_error.txt  fix_type_hints.py  ip-command-id.txt  mypy_output.txt  params.json  pyproject.toml  (+19 more)
.github/workflows/: ci.yml  deploy-ec2.yml  docker-build.yml  publish-images.yml
api/: deps.py  main.py
api/core/: config.py  logging.py
api/routers/: f1.py  health.py  meta.py  models.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/features/: 2025_season.json  2026_season.json  features.parquet  features_pairwise.parquet
deploy/: .env.prod  DOCKER_DEPLOYMENT.md  GITHUB_SECRETS.md  NGINX_README.md  README_DEPLOY.md  SSM_DEPLOYMENT_SECRETS.md  SYSTEMD_SERVICE.md  basic-cmd-id.json  check-basic.json  check-ui.sh  deploy-result.txt  deploy.bat  deploy_automated.sh  deploy_full.sh  deploy_to_ec2.py  diagnostic-result.txt  docker-compose.prod.yml  ec2_bootstrap.sh  ec2_deploy.sh  env.prod.example  f1-api.service  f1.service  fetch_ssm_output.py  fix_nginx.sh  nginx-simple.conf  nginx.conf  quick_nginx_setup.sh  run_diagnostics.py  setup_nginx.sh  ui-check-cmd-id.json  ui-check-full.txt  ui-check-output-utf8.txt  ui-check-output.json  ui-check-params.json  ui-check-stderr.txt  update_server.sh  verify_deployment.py
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: aarav-shah.conf  f1-insights.conf  f1.aarav-shah.conf
docker/: DOCKER_COMPOSE.md  Dockerfile.api  Dockerfile.nginx  Dockerfile.web  README.md  nginx.conf  supervisord.conf
docs/: DATA.md  F1.md  GHCR_SETUP.md  GITHUB_SECRETS.md
f1/: schemas.py
f1/analysis/: counterfactuals.py  explain.py
f1/data/: __init__.py  enhanced_features.py  features.py  loaders.py
f1/evaluation/: __init__.py  backtest.py  calibration.py  metrics.py
f1/models/: __init__.py  baselines.py  ensemble.py  nbt_tlf.py  pairwise.py  registry.py  train.py
f1/storage/: __init__.py  s3.py
models/cat/: cat_win.joblib  cat_win_metadata.json
models/elo/: model.joblib
models/lgbm/: lgbm_win.joblib  lgbm_win_metadata.json
models/lr/: lr_win.joblib  lr_win_metadata.json
models/nbt_tlf/: config.json  model.pt
models/quali_freq/: model.joblib
models/rf/: rf_win.joblib  rf_win_metadata.json
models/xgb/: xgb_win.joblib  xgb_win_metadata.json
ops/: deploy.sh  gce-startup.sh  healthcheck.sh
reports/: backtest.json  backtest.md
scripts/: backtest.py  ci_gate.ps1  ci_gate.sh  deploy.sh  ingest.py
test_reports/: backtest.json  backtest.md
tests/: conftest.py  test_api_smoke.py  test_baselines.py  test_calibration.py  test_contracts.py  test_counterfactuals.py  test_features.py  test_meta.py  test_pairwise.py  test_registry.py  test_smoke.py
tests/fixtures/: README.md  generate_fixtures.py
tests/fixtures/models/: quali_freq.joblib
web/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
web/e2e/: smoke.spec.ts
web/src/app/: error.tsx  layout.tsx  page.tsx
web/src/app/2026/: page.tsx
web/src/app/abtesting/: page.tsx
web/src/app/architecture/: page.tsx
web/src/app/backtest/: page.tsx
web/src/app/bayesian/: page.tsx
web/src/app/career/: page.tsx
web/src/app/causal/: page.tsx
web/src/app/championship/: page.tsx
web/src/app/compare/: page.tsx
web/src/app/constructor-tracker/: page.tsx
web/src/app/constructors/: page.tsx
web/src/app/counterfactual/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/docs/: page.tsx
web/src/app/driver-compare/: page.tsx
web/src/app/driver-dna/: page.tsx
web/src/app/drs-analysis/: page.tsx
web/src/app/ensemble/: page.tsx
web/src/app/explainer/: page.tsx
web/src/app/export/: page.tsx
web/src/app/fantasy/: page.tsx
web/src/app/fuel-optimizer/: page.tsx
web/src/app/gap-predictor/: page.tsx
web/src/app/getting-started/: page.tsx
web/src/app/head-to-head/: page.tsx
web/src/app/history/: page.tsx
web/src/app/incident-heatmap/: page.tsx
web/src/app/live/: page.tsx
web/src/app/ml-analytics/: page.tsx
web/src/app/monitoring/: page.tsx
web/src/app/playground/: page.tsx
web/src/app/quali-predictor/: page.tsx
web/src/app/qualifying/: page.tsx
web/src/app/race-explorer/: page.tsx
web/src/components/: CredibilityPanel.tsx  FeatureInfo.tsx  Footer.tsx  LiveIndicator.tsx  ModelComparisonChart.tsx  Navbar.tsx  PageHeader.tsx  QuickAccessPanel.tsx  RacePicker.tsx  ReliabilityDiagram.tsx
web/src/constants/: f1-data.ts
web/src/context/: ThemeContext.tsx
web/src/lib/: f1-live.ts
web/src/utils/: api.ts
(+34 files in other folders)
